# foodSnapAgentOfVegaz

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
docs/: CLAUDE.md  RAG全链路实现文档.md  agent.py实现思路和逻辑.md
src/: agent.py  config.py
src/api/: routes.py
src/memory/: manager.py
src/models/: schemas.py  tables.py
src/rag/: chunker.py  retriever.py  rewriter.py
src/tools/: article_tools.py  base.py  image_tools.py  map_tools.py  memory_tools.py
