[project]
name = "food-snap-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pydantic-ai>=1.107.0",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.49.0",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]
